# MitoEM2.0

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py  submit_slurm.py
mitoem2/: __init__.py
mitoem2/configs/: __init__.py  config.py  defaults.yaml
mitoem2/configs/microsam/: inference_default.yaml  train_default.yaml
mitoem2/configs/mitonet/: inference_default.yaml  train_default.yaml
mitoem2/configs/nnunet/: train_default.yaml
mitoem2/data/: __init__.py  dataloader.py  dataset.py  transforms.py
mitoem2/data/converters/: __init__.py  format_converter.py  nnunet_converter.py
mitoem2/empanada/: array_utils.py  consensus.py  losses.py  metrics.py  zarr_utils.py
mitoem2/empanada_napari/: _export_import_models.py  _finetune.py  _merge_split_widget.py  _pick_patches.py  _register_model.py  _slice_inference.py  _train.py  _volume_inference.py  finetune.py  inference.py  multigpu.py  train.py  utils.py
mitoem2/evaluation/: __init__.py  metrics.py
mitoem2/inference/: __init__.py  base.py  microsam_inference.py  mitonet_inference.py
mitoem2/models/: __init__.py  base.py
mitoem2/postprocessing/: bc_watershed.py  generate_contour.py  mask_cc3d.py  postprocessing.py  predict_boundary.py  refine_instances.py
mitoem2/scripts/: __init__.py  evaluate.py  inference.py  train.py
mitoem2/training/: __init__.py  callbacks.py  microsam_trainer.py  mitonet_trainer.py  nnunet_trainer.py  trainer.py
mitoem2/utils/: __init__.py  checkpoint.py  device.py  empanada_imports.py  logging.py  paths.py
(+42 files in other folders)
