[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitoem2"
version = "0.1.0"
description = "A comprehensive toolkit for mitochondria segmentation in EM images"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MitoEM2 Team"}
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "mypy",
    "ruff",
]

[tool.setuptools]
packages = ["mitoem2"]

[tool.setuptools.package-data]
mitoem2 = ["configs/*.yaml", "configs/*/*.yaml", "configs/*/*/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
